--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+java.runtime.version=17
 
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
